--- a/src/styles/articles.module.css
+++ b/src/styles/articles.module.css
@@ -1,6 +1,7 @@
 .cardArticle {
   width: 100%;
   height: auto;
+  min-height: 150px;
   margin-bottom: 20px;
   background-color: rgb(21, 21, 21) !important;
   border-radius: 8px !important;
