--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -87,3 +87,15 @@ textarea {
   font-size: 20px;
   padding: 10px !important;
 }
+
+.pageNotFound {
+  width: 100%;
+  height: auto;
+  margin-top: 7rem;
+}
+.pageNotFound .pageNotFoundTextContainer {
+  text-align: center;
+  font-size: 33px;
+  font-weight: 500;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
