--- a/src/styles/articles.module.css
+++ b/src/styles/articles.module.css
@@ -1,11 +1,12 @@
 .cardArticle {
   width: 100%;
-  height: auto;
-  min-height: 150px;
+  height: 100%;
+  min-height: 250px;
   margin-bottom: 20px;
   background-color: rgb(21, 21, 21) !important;
   border-radius: 8px !important;
   transition: ease-in-out 500ms;
+  overflow: hidden;
 }
 .cardArticle:hover {
   -webkit-transform: scale(1.1) rotate(0.01deg);
@@ -23,7 +24,7 @@
 }
 .cardArticleBody {
   color: #fff;
-  margin-bottom: 13px;
+  margin-bottom: 20px !important;
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
